--- a/index.html
+++ b/index.html
@@ -66,19 +66,18 @@
     <div class="container-fluid" id="home">
         <div class="row">
            <div class="col-sm-12 col-md-12 col-lg-8 presentation d-flex flex-column justify-content-center align-items-center text-justify">
-             <h1 class="pt-6 px-4">S A N D Y T R A N .  D E V E L O P P E U S E . I N T E G R A T I C E . W E B . J U N I O R</h1>
+             <h1 class="pt-6 px-4">S A N D Y <span class="name">T R A N</span> .  D E V E L O P P E U S E . I N T E G R A T R I C E . W E B . J U N I O R</h1>
              <p>Apres une expérience de 10 ans en management dans le domaine du prêt à porter,
             j'ai voulu me reconvertir et faire une formation afin de devenir developpeuse web.
-            j'ai toujours été interressée par l'informatique et ayant des amis proches dans ce domaine
+            J'ai toujours été interressée par l'informatique et ayant des amis proches dans ce domaine
             cela m'a conforté dans l'idée de me lancer dans cette voie.
             Organisée, je fais preuve d'un excellent relationnel et sais m'adapter aux changements et travailler dans l'urgence.
-            etant curieuse, je possede un parcours assez atypique,
-            en effet je me suis essayée a pleins de choses mais le developpement web
+            Etant curieuse, je possède un parcours assez atypique, en effet je me suis essayée a pleins de choses mais le developpement web
             a été une révélation pour moi. C'est un métier où il y a toujours des choses
             a apprendre donc on ne s'ennuie jamais.</p>
            </div>
            <div class="col-sm-12 col-md-12 col-lg-4 d-flex justify-content-center align-items-center profil">
-            <img class="img-fluid float-right mx-auto"  src="assets/images/profil.jpg" alt="Photo de profil">
+            <img class="img-fluid float-right mx-auto"  src="assets/images/Profil-2.jpg" alt="Photo de profil">
            </div>  
         </div>
     </div>
@@ -251,25 +250,32 @@
         <div>
             <h4>2013 - 2018</h4>
             <h6>Manager chez Sauver le monde des hommes - Paris</h6>
-            <p>management des équipes sur 4 boutiques (10 personnes)
-                mise en place de challenge, organisation de team building
-                atteinte des objectifs annuels et augmentation du ca
-                gestion des plannings et des stocks
-                recrutement et formation des vendeurs et responsables
-                gestion mensuelle des caisses et depot en banque
-                organisation et gestion d'ouverture des nouvelles boutiques:
-                participation aux travaux, gestion et commande de fournitures,
-                gestion du courrier et des factures,
-                mise aux normes sécurite boutiques
-                accueil et conseil client</p>
+            <p>
+                <ul>
+                    <li>Management des équipes sur 4 boutiques (10 personnes).</li>
+                    <li>Mise en place de challenge, organisation de Team Building, atteinte des objectifs annuels et augmentation du CA.</li>
+                    <li>Gestion des plannings et des stocks.</li>
+                    <li>Recrutement et formation des vendeurs et responsables.</li>
+                    <li>Gestion mensuelle des caisses et dépôt en banque.</li>
+                    <li>Organisation et gestion d'ouverture des nouvelles boutiques :</li>
+                    Participation aux travaux, gestion et commande de fournitures.
+                    Gestion du courrier et des factures.
+                    Mise aux normes sécurite boutiques.
+                    Accueil et conseil client.
+                </ul>
+         
+                </p>
         </div>
         <div class="trait"></div>
         <div>
             <h4>03.2018</h4>
             <h6>Bookeuse Mannequin chez McCann - Paris</h6>
-            <p> casting sauvage et booking pour une campagne film cosmétique l'oreal paris.
-                Prise de brief, contact en direct, accompagnement des modèles lors du tournage.
-                Dix profils proposes en une semaine, cinq profils retenus.
+            <p> 
+                <ul>
+                    <li>Casting sauvage et booking pour une campagne film cosmétique l'Oréal Paris.</li>
+                    <li>Prise de brief, contact en direct, accompagnement des modèles lors du tournage.</li>
+                    <li>Dix profils proposés en une semaine, cinq profils retenus.</li>
+                </ul>
         </div>
         <div class="trait"></div>
         <div>
