--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
                     <li>Recrutement et formation des vendeurs et responsables.</li>
                     <li>Gestion mensuelle des caisses et dépôt en banque.</li>
                     <li>Organisation et gestion d'ouverture des nouvelles boutiques :</li>
-                    Participation aux travaux, gestion et commande de fournitures.
-                    Gestion du courrier et des factures.
-                    Mise aux normes sécurite boutiques.
-                    Accueil et conseil client.
+                    <div>Participation aux travaux, gestion et commande de fournitures.</div>
+                    <div>Gestion du courrier et des factures.</div>
+                    <div>Mise aux normes sécurite boutiques.</div>
+                    <div>Accueil et conseil client.</div>
                 </ul>
          
                 </p>
