--- a/index.html
+++ b/index.html
@@ -133,78 +133,91 @@
             </div>
     </div>
 
-    <div id="portfolio">
-        <h2>PORTFOLIO</h2>
+
         <div class="container">
             <div class="card">
                 <div class="imgBx">
-                    <img src="assets/images/mcdo.jpg" alt="une camera sur une carte">
+                    <img src="assets/images/BAOBAB-LOGO.png" alt="Logo de JoeBaobab paysagiste">
                 </div>
                 <div class="contentBx">
                     <div class="content">
-                        <h3>Post One</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque sapiente ipsum vel delectus dicta ratione modi iure enim quas eaque quod, nam, odit impedit tempore quidem, excepturi quae quaerat quam.</p>
+                        <h3>Joe Baobab</h3>
+                        <p>Projet d'étude d'un faux site vitrine pour un paysagiste. Site réalisé, from scratch, en HTML5, CSS4 et Javascript.</p>
+                        <a class="site" href="https://sandy-tran.github.io/Joe-Baobab/" target="_blank">Voir le site</a>
                     </div>
                 </div>  
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="assets/images/mcdo.jpg" alt="rails de train">
+                    <img src="assets/images/SOUNDS-GOOD.png" alt="Logo de Sounds Good">
                 </div>
                 <div class="contentBx">
                     <div class="content">
-                        <h3>Post Two</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque sapiente ipsum vel delectus dicta ratione modi iure enim quas eaque quod, nam, odit impedit tempore quidem, excepturi quae quaerat quam.</p>
+                        <h3>Sounds Good</h3>
+                        <p>Projet d'étude d'un site marchand.
+                        L'idée était de créer un faux site, from scratch, de vente d'instruments de musique.
+                        Nous étions une équipe de 4 personnes et le délai pour le réalisé était de 3 jours.
+                        Les languages utilisés sont: HTML5, CSS4, Bootstrap4 et Javascript.</p>
+                        <a class="site" href="https://sandy-tran.github.io/SoundsGood/" target="_blank">Voir le site</a>
                     </div>
                 </div>  
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="assets/images/mcdo.jpg" alt="une fille, une camera et un bonnet rouge">
+                    <img src="assets/images/LogoZerance.png" alt="une fille, une camera et un bonnet rouge">
                 </div>
                 <div class="contentBx">
                     <div class="content">
-                        <h3>Post Three</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque sapiente ipsum vel delectus dicta ratione modi iure enim quas eaque quod, nam, odit impedit tempore quidem, excepturi quae quaerat quam.</p>
+                        <h3>Studio Zerance</h3>
+                        <p>Test Technique Front-end. Le but était de développer la page d'accueil de leur site internet à partir d'une maquette en suivant certaines consignes.
+                            Les languages utilisés sont: HTML5, CSS4, Javascript (librairie splidejs) et une "gender API" pour le formulaire. 
+                        </p>
+                        <a class="site" href="https://sandy-tran.github.io/Test-Zerance-Studio/" target="_blank">Voir le site</a>
                     </div>
                 </div>  
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="assets/images/mcdo.jpg" alt="paysage vert">
+                    <img src="assets/images/Sunnyside.png" alt="paysage vert">
                 </div>
                 <div class="contentBx">
                     <div class="content">
-                        <h3>Post Four</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque sapiente ipsum vel delectus dicta ratione modi iure enim quas eaque quod, nam, odit impedit tempore quidem, excepturi quae quaerat quam.</p>
+                        <h3>Sunnyside Agency</h3>
+                        <p>Challenge du site Frontend Mentor. Le but était de réaliser la landing page d'une fausse agence d'après les maquettes et les instructions données.
+                            Les languages utilisés sont: HTML5, CSS4.
+                        </p>
+                        <a class="site" href="https://sandy-tran.github.io/Sunnyside-agency/" target="_blank">Voir le site</a>
                     </div>
                 </div>  
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="assets/images/mcdo.jpg" alt="paysage vert">
+                    <img src="assets/images/NFT-Challenge.png" alt="paysage vert">
                 </div>
                 <div class="contentBx">
                     <div class="content">
-                        <h3>Post Four</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque sapiente ipsum vel delectus dicta ratione modi iure enim quas eaque quod, nam, odit impedit tempore quidem, excepturi quae quaerat quam.</p>
+                        <h3>NFT Card</h3>
+                        <p>Challenge du site Frontend Mentor. Le but était de réaliser une "NFT preview card component" d'après les maquettes et les instructions données.
+                            Les languages utilisés sont: HTML5, CSS4.
+                        </p>
+                        <a class="site" href="https://sandy-tran.github.io/NFT-Preview-Card-Challenge/" target="_blank">Voir le site</a>
                     </div>
                 </div>  
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="assets/images/mcdo.jpg" alt="paysage vert">
+                    <img src="assets/images/Logo-BBC.png" alt="paysage vert">
                 </div>
                 <div class="contentBx">
                     <div class="content">
-                        <h3>Post Four</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque sapiente ipsum vel delectus dicta ratione modi iure enim quas eaque quod, nam, odit impedit tempore quidem, excepturi quae quaerat quam.</p>
+                        <h3>Big Black Cook</h3>
+                        <p>A venir, prototype du site du restaurant Big Black Cook Paris.</p>
+                        <a class="site" href="https://www.groupe-advantail.com//fichiers/boutique/big-black-cook_menu-bbc.pdf" target="_blank">En attendant, découvrez la carte.</a>
                     </div>
                 </div>  
             </div>
         </div>
 
-    </div>
 
 
     <div id="formation">
