--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <a class="link" href="#portfolio">PORTFOLIO</a>
         <a class="link" href="#formation">FORMATION</a>
         <a class="link" href="#experiences">EXPERIENCES</a>
-        <a href="mailto:transnd@gmail.com"><img id="mail" src="assets/images/enveloppe.png" alt=""></a>
+        <a href="mailto:transnd@gmail.com" target="_blank"><img id="mail" src="assets/images/enveloppe.png" alt=""></a>
         <a href="javascript:void(0);" class="icon" onclick="myNavbar()">
           <i class="fa fa-bars"></i>
         </a>
