--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
                 </span>
                 <h4>FRONT</h4>
                 <div class="liste">
-                <p>HTML</p>
-                <p>CSS / SASS</p>
-                <p>JAVASCRIPT / JQUERY</p>
-                <p>WORDPRESS</p>
+                <p>HTML +++++</p>
+                <p>CSS / SASS ++++</p>
+                <p>JAVASCRIPT / JQUERY +++</p>
+                <p>WORDPRESS ++</p>
             </div>
             </div>
             <div class="div3"> 
                 <span><img class="logo" src="assets/images/back.png" alt="">
                 <h4>BACK</h4>
                 <div class="liste">
-                <p>PHP</p>
-                <p>MYSQL</p>
+                <p>PHP +</p>
+                <p>MYSQL +</p>
             </div>
             </div>
             <div class="div4"> 
@@ -117,17 +117,17 @@
                 <h4>WORKFLOW</h4>
                 <div class="liste">
                 <p>VISUAL STUDIO CODE / ATOM</p>
-                <p>GITHUB</p>
-                <p>ADOBE XD</p>
+                <p>GITHUB +++</p>
+                <p>ADOBE XD ++</p>
             </div>
             </div>
             <div class="div5"> 
                 <span><img class="logo" src="assets/images/language.png" alt="">
                 <h4>LANGUES</h4>
                 <div class="liste">
-                <p>FRANCAIS</p>
-                <p>ANGLAIS</p>
-                <p>VIETNAMIEN</p>
+                <p>FRANCAIS +++++</p>
+                <p>ANGLAIS ++++</p>
+                <p>VIETNAMIEN +++</p>
             </div>
             </div>
             </div>
